# dotnet-runtime-37552

./: .gitignore  NativeBinding.code-workspace  README.md
InteropTestNative/: CMakeLists.txt
InteropTestNative/src/: InteropTestNativeDataStructures.hh  InteropTestNativeExport.cc  InteropTestNativeExport.hh  InteropTestNativeWrapper.cc  InteropTestNativeWrapper.hh
NativeBinding.Tests/: NativeBinding.Tests.csproj
NativeBinding.Tests/src/: NativeWrapper.cs  PInvokeTests.cs
